archive/argo/gateway.yaml
apiVersion: argoproj.io/v1alpha1
kind: Gateway
metadata:
  name: nats-gateway
  labels:
    # gateway controller with instanceId "argo-events" will process this gateway
    gateways.argoproj.io/gateway-controller-instanceid: argo-events
spec:
  type: nats
  eventSourceRef:
    name: nats-event-source
  template:
    metadata:
      name: nats-gateway
      labels:
        gateway-name: nats-gateway
    spec:
      containers:
        - name: gateway-client
          image: argoproj/gateway-client:v0.14.0
          imagePullPolicy: IfNotPresent
          command: ["/bin/gateway-client"]
        - name: nats-events
          image: argoproj/nats-gateway:v0.14.0
          imagePullPolicy: IfNotPresent
          command: ["/bin/nats-gateway"]
      serviceAccountName: argo-events-sa
  subscribers:
    http:
      - "http://nats-sensor.svc:9300/"


# apiVersion: argoproj.io/v1alpha1
# kind: Gateway
# metadata:
#   name: minio-gateway
#   labels:
#     # gateway controller with instanceId "argo-events" will process this gateway
#     gateways.argoproj.io/gateway-controller-instanceid: argo-events
# spec:
#   type: minio
#   eventSourceRef:
#     name: minio-event-source
#   template:
#     metadata:
#       name: minio-gateway
#       labels:
#         gateway-name: minio-gateway
#     spec:
#       containers:
#         - name: gateway-client
#           image: argoproj/gateway-client:v0.13.0
#           imagePullPolicy: Always
#           command: ["/bin/gateway-client"]
#         - name: minio-events
#           image: argoproj/artifact-gateway:v0.13.0
#           imagePullPolicy: Always
#       serviceAccountName: argo-events-sa
#   subscribers:
#     http:
#       - "http://minio-sensor.kube-system.svc:9300/"
